--- a/frontend/style.css
+++ b/frontend/style.css
@@ -66,3 +66,42 @@ nav {
     color: white;
    
 }
+
+.hotel-gallery {
+    margin-top: 9em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+}
+.hotel-card {
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 15px;
+    text-align: center;
+    width: 300px;
+    transition: transform 0.3s ease;
+}
+.hotel-card:hover {
+    transform: scale(1.05);
+}
+.hotel-card img {
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+}
+button {
+    background: #8462D4;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-top: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
+}
+button:hover {
+    background: #6e4fb9;
+}
