--- a/frontend/style.css
+++ b/frontend/style.css
@@ -5,7 +5,7 @@
 * {
     margin: 0;
     padding: 0;
-    
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
 body {
@@ -95,24 +95,31 @@ nav {
     height: 200px;
     border-radius: 10px;
 }
-button {
-    background: #8462D4;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    margin-top: 10px;
+.hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-weight: 500;
+    font-size: 17px;
+    background: transparent;
+    position: relative;
     cursor: pointer;
-    border-radius: 5px;
-    font-size: 16px;
+    transition: 1s;
 }
-button:hover {
-    background: #6e4fb9;
+
+.hero-btn:hover {
+    border: 1px solid #f44336;
+    background: #e35248;
+    transition: 1s;
 }
+
 #Info {
-    
+    font-weight: 600;
     font-family: "Lucida Handwriting", cursive;
     color: white;
-    font-size: 30px;
+    font-size: 62px;
     text-align: center;
     padding: 20px;
     border-radius: 100px;
@@ -121,13 +128,12 @@ button:hover {
     margin: 70px auto 30px;
 }
 #Obesnenie{
-    
-    font-size: 17px;
+    font-weight: 400;
+    font-size: 21px;
     text-align: center;
     padding: 20px;
     border-radius: 30px;
     width: 90%;
     max-width: 600px;
     margin: -40px auto 30px;
-    font-weight: 100;
 }
