--- a/Backend/static/css/login.css
+++ b/Backend/static/css/login.css
@@ -208,3 +208,91 @@ textarea:valid {
 .contactForm a:hover {
     color: #d15be9c2;
 }
+.mapForm {
+    height: 60em;
+    margin-top: 2em;
+    width: 80%;
+    padding: 40px;
+    background: #2C2638;
+}
+
+.mapForm h3 {
+    font-size: 36px;
+    color: #fff; 
+    font-weight: 400;
+}
+.mapForm .inputBox input,
+.mapForm .inputBox textarea {
+    width: 100%;
+    padding: 12px;
+    font-size: 16px;
+    margin: 10px 0;
+    border: 1px solid #5a5167;
+    outline: none;
+    resize: none;
+    background: #211b2d;
+    color: #fff;
+    border-radius: 6px;
+    transition: border-color 0.3s ease, background-color 0.3s ease;
+
+}
+
+.mapForm .inputBox span {
+    position: absolute;
+    left: 15px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 14px;
+    color: #b3a7c7;
+    transition: 0.3s;
+    pointer-events: none;
+}
+
+.mapForm .inputBox input:focus ~ span,
+.mapForm .inputBox input:valid ~ span,
+.mapForm .inputBox textarea:focus ~ span,
+.mapForm .inputBox textarea:valid ~ span {
+    top: -0.4em;
+    left: 10px;
+    font-size: 12px;
+    color: #d1c1e0;
+}
+
+.mapForm .inputBox input:focus,
+.mapForm .inputBox textarea:focus {
+    border-color: #7c6a97; 
+    background: #2c2638; 
+    
+}
+
+.mapForm .inputBox {
+    position: relative;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.mapForm .inputBox input[type="submit"] {
+    margin-top: 1em;
+    width: 100%;
+    background: #8462D4;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 18px;
+}
+.mapForm .inputBox input[type="submit"]:hover {
+    background: #6e4fb9; 
+}
+
+.mapForm a {
+    color: #d15be9;
+    text-decoration: underline;
+}
+.mapForm a:hover {
+    color: #d15be9c2;
+}
+iframe{
+    width: 100%;
+    height: 30em;
+}
