App is running smoothly
Finnaly done with the register and login

--- a/Backend/templates/signup.html
+++ b/Backend/templates/signup.html
@@ -41,22 +41,22 @@
                     <!-- Use Flask form's field names -->
                     {{ form.username.label }}
                     {{ form.username(class="form-control") }}
-                    <span>Username</span>
+                    <span></span>
                 </div>
                 <div class="inputBox">
                     {{ form.email.label }}
                     {{ form.email(class="form-control") }}
-                    <span>Email</span>
+                    <span></span>
                 </div>
                 <div class="inputBox">
                     {{ form.password.label }}
                     {{ form.password(class="form-control") }}
-                    <span>Password</span>
+                    <span></span>
                 </div>
                 <div class="inputBox">
                     {{ form.confirm_password.label }}
                     {{ form.confirm_password(class="form-control") }}
-                    <span>Confirm password</span>
+                    <span></span>
                 </div>
                 <div class="inputBox">
                     {{ form.submit(class="submit-button") }}
