--- a/frontend/style1.css
+++ b/frontend/style1.css
@@ -9,7 +9,7 @@
     box-sizing: border-box;
 }
 body {
-    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(images/image.png);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),url("images/City.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
@@ -109,28 +109,71 @@ button {
 button:hover {
     background: #6e4fb9;
 }
-
-#Info {
-    
+#Aboutus {
     font-family: "Lucida Handwriting", cursive;
     color: white;
-    font-size: 30px;
+    font-size: 50px;
     text-align: center;
     padding: 20px;
     border-radius: 100px;
     width: 90%;
     max-width: 1000px;
-    margin: 70px auto 30px;
+    margin: 100px auto 30px;
 }
-#Obesnenie{
-    
-    font-size: 17px;
+#text{
+    color:white;
     text-align: center;
-    padding: 20px;
-    border-radius: 30px;
+    padding:20x ;
     width: 90%;
-    max-width: 600px;
-    margin: -40px auto 30px;
-    font-weight: 100;
+    font-weight: 600;
+    border-radius: 100px;
+    font-size: 19px;
+    max-width: 1000px;
+    margin:10px auto 30px;
 }
+
+
+.team-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap; 
+    max-width: 90%;
+}
+
+
+.team-member {
+    text-align: center;
+    background: white;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    width: 200px;
+}
+
+
+.team-member img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+
+.team-member h3 {
+    margin: 10px 0 5px;
+    font-size: 18px;
+}
+
+.team-member p {
+    font-size: 14px;
+    color: #555;
+}
+
+
+
+
+
+
+
 
