--- a/Backend/static/css/login.css
+++ b/Backend/static/css/login.css
@@ -296,3 +296,29 @@ iframe{
     width: 100%;
     height: 30em;
 }
+#ikonka{
+    margin-left: 1em;
+    color:#6e4fb9;
+
+}
+.hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-weight: 500;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+    transition: 1s;
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+.hero-btn:hover {
+    border: 1px solid #f44336;
+    background: #e35248;
+    transition: 1s;
+}
