Rerouted to the about pages

--- a/Backend/templates/about.html
+++ b/Backend/templates/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="static/css/style1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
@@ -16,11 +16,11 @@
         <nav>
             <h1 id = "title">Saitche</h1>
             <ul class="nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="/home">Home</a></li>
+                <li><a href="/about">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Service</a></li>
-                <a href="signup.html"><i class="fa-solid fa-user"></i></a>
+                <a href="/register"><i class="fa-solid fa-user"></i></a>
                 
             </ul>
         </nav>
