--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -17,7 +17,7 @@
             <h1 id = "title">Saitche</h1>
             <ul class="nav">
                 <li><a href="/home">Home</a></li>
-                <li><a href="display.html">About</a></li>
+                <li><a href="/about">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Service</a></li>
                 <a href="/register"><i class="fa-solid fa-user"></i></a>
