--- a/Backend/templates/input.html
+++ b/Backend/templates/input.html
@@ -19,7 +19,7 @@
                 <li><a href="/home">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="#">Service</a></li>
+                <li><a href="/search">Service</a></li>
                 <a href="/register"><i class="fa-solid fa-user"></i></a>
 
             </ul>
