--- a/Backend/templates/login.html
+++ b/Backend/templates/login.html
@@ -16,7 +16,7 @@
             <h1 id="title">Saitche</h1>
             <ul class="nav">
                 <li><a href="{{ url_for('homepage') }}">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/about">About</a></li>
                 <li><a href="{{ url_for('search') }}">Contact</a></li>
                 <li><a href="#">Service</a></li>
                 <a href="{{ url_for('login') }}"><i class="fa-solid fa-user"></i></a>
