--- a/Backend/templates/login.html
+++ b/Backend/templates/login.html
@@ -19,7 +19,7 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="{{ url_for('search') }}">Contact</a></li>
                 <li><a href="#">Service</a></li>
-                <a href="{{ url_for('login') }}"><i class="fa-solid fa-user"></i></a>
+                <a href="{{ url_for('login') }}">Sign up<i class="fa-solid fa-user"></i></a>
             </ul>
         </nav>
     </header>
