--- a/Backend/templates/signup.html
+++ b/Backend/templates/signup.html
@@ -19,7 +19,7 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Service</a></li>
-                <a href="/login"><i class="fa-solid fa-user"></i></a>
+                <a href="/login">Login<i class="fa-solid fa-user"></i></a>
             </ul>
         </nav>
     </header>
