malka promqna na ikonkite

--- a/Backend/static/css/login.css
+++ b/Backend/static/css/login.css
@@ -63,6 +63,7 @@ nav {
 }
 .nav i{
     color: white;
+    margin-left: 1em;
    
 }
 .contact {
@@ -332,4 +333,5 @@ iframe{
 .inputBox{
     color:#ffffff96;
 };
+
 
