logout butonche za vseki html

--- a/Backend/templates/input.html
+++ b/Backend/templates/input.html
@@ -20,8 +20,12 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="/search">Service</a></li>
-                <a href="/register"><i class="fa-solid fa-user"></i></a>
-
+                {% if current_user.is_authenticated %}
+                    <li><a href="/logout">Logout</a></li>
+                {% else %}
+                    <a href="/register">Sign up<i class="fa-solid fa-user"></i></a>
+                    <a href="/login">Log in<i class="fa-solid fa-user"></i></a>
+                {% endif %}
             </ul>
         </nav>
     </header>
