Dobaven hard code review

--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -18,7 +18,7 @@
             <ul class="nav">
                 <li><a href="/home">Home</a></li>
                 <li><a href="/about">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/contact">Contact</a></li>
                 <li><a href="#">Service</a></li>
                 {% if current_user.is_authenticated %}
                     <li><a href="/logout">Logout</a></li>
@@ -34,10 +34,14 @@
         <p id="Obesnenie">,,Saitche"
             helps people by easily organizing vacations and gatherings with family, friends, colleagues.</p>
             <a href="/search" class="hero-btn">Visit Us To Know More</a>
-        
+            <div id="reviews"> 
+                <p id="Review1"> This site manages everything so easily! I can make good plans for a vacation with my family.</p>
+                <p id=""></p>
+            </div>
         <div class = "text-box">
             <h1></h1>
         </div>
     </div>
+        
 </body>
 </html>
