--- a/Backend/templates/about.html
+++ b/Backend/templates/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style1.css">
+    <link rel="stylesheet" href="static/css/about.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
@@ -18,8 +18,8 @@
             <ul class="nav">
                 <li><a href="/home">Home</a></li>
                 <li><a href="/about">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="#">Service</a></li>
+                <li><a href="/contact">Contact</a></li>
+                <li><a href="/search">Service</a></li>
                 {% if current_user.is_authenticated %}
                     <li><a href="/logout">Logout</a></li>
                 {% else %}
@@ -50,7 +50,7 @@
         </div>
         <div class="team-member">
             <img src="static/images/ulian.jpg" alt="Ulian">
-            <h3>Ulian</h3>
+            <h3>Uliqn</h3>
             <p>Creative Innovator</p>
         </div>
         <div class="team-member">
