--- a/Backend/templates/display.html
+++ b/Backend/templates/display.html
@@ -18,8 +18,8 @@
             <ul class="nav">
                 <li><a href="/home">Home</a></li>
                 <li><a href="/about">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="#">Service</a></li>
+                <li><a href="/contact">Contact</a></li>
+                <li><a href="/search">Service</a></li>
                 {% if current_user.is_authenticated %}
                     <li><a href="/logout">Logout</a></li>
                 {% else %}
