--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -19,7 +19,7 @@
                 <li><a href="/home">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/contact">Contact</a></li>
-                <li><a href="#">Service</a></li>
+                <li><a href="/search">Service</a></li>
                 {% if current_user.is_authenticated %}
                     <li><a href="/logout">Logout</a></li>
                 {% else %}
@@ -34,9 +34,45 @@
         <p id="Obesnenie">,,Saitche"
             helps people by easily organizing vacations and gatherings with family, friends, colleagues.</p>
             <a href="/search" class="hero-btn">Visit Us To Know More</a>
-            <div id="reviews"> 
-                <p id="Review1"> This site manages everything so easily! I can make good plans for a vacation with my family.</p>
-                <p id=""></p>
+            <div id="reviews-container">
+                <div class="review-card">
+                    <p>"This site manages everything so easily! I can make good plans for a vacation with my family."</p>
+                    <div class="reviewer-info">
+                       
+                        <div>
+                            <h3 class="reviewer-name">Martin Domovchiev</h3>
+                            <p class="reviewer-role">Content creator</p>
+                        </div>
+                    </div>
+                </div>
+            
+                <div class="review-card">
+                    <p>"I found it hard before to make family reservations for a visit but now I don't have to worry anymore."</p>
+                    <div class="reviewer-info">
+                        
+                        <div>
+                            <h3 class="reviewer-name">John Smith</h3>
+                            <p class="reviewer-role">Traveler</p>
+                        </div>
+                    </div>
+                </div>
+                    
+                <div class="review-card">
+                    <p>"I really like to travel with friends and this website makes it so much fun! I enjoy posting my stories."</p>
+                    <div class="reviewer-info">
+                        
+                        <div>
+                            <h3 class="reviewer-name">Teodor Simeonov</h3>
+                            <p class="reviewer-role">Finance councelor</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <p class="posts">See other reviews and posts!</p>
+                </div>
+                
+                
+               
             </div>
         <div class = "text-box">
             <h1></h1>
