--- a/Backend/static/css/login.css
+++ b/Backend/static/css/login.css
@@ -10,7 +10,7 @@
     box-sizing: border-box;
 }
 body {
-    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("/static/images/image.png");
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("/static/images/veliko-tarnovo-bulgaria-wallpaper-preview.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
