--- a/Backend/templates/contact.html
+++ b/Backend/templates/contact.html
@@ -7,6 +7,7 @@
     <title>Contact Us</title>
     <link rel="stylesheet" href="static/css/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/c19c712794.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -20,7 +21,7 @@
                 <li><a href="/contact">Contact</a></li>
                 <li><a href="/search">Service</a></li>
                 {% if current_user.is_authenticated %}
-                    <li><a href="/logout">Logout</a></li>
+                    <li><a href="/logout">Log out</a></li>
                 {% else %}
                     <a href="/register">Sign up<i class="fa-solid fa-user"></i></a>
                     <a href="/login">Log in<i class="fa-solid fa-user"></i></a>
