Dancho unsleep 3 chasa

--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -67,7 +67,8 @@
                     </div>
                 </div>
                 <div>
-                    <p class="posts">See other reviews and posts!</p>
+                    <a href="/create_post" class="posts">See other reviews and posts!</a>
+                    
                 </div>
                 
                 
