--- a/Backend/templates/about.html
+++ b/Backend/templates/about.html
@@ -20,8 +20,8 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Service</a></li>
-                <a href="/register"><i class="fa-solid fa-user"></i></a>
-                
+                <a href="/register">Sign up<i class="fa-solid fa-user"></i></a>
+                <a href="/login">Log in<i class="fa-solid fa-user"></i></a>
             </ul>
         </nav>
     </header>
