--- a/Backend/static/css/login.css
+++ b/Backend/static/css/login.css
@@ -330,8 +330,9 @@ iframe{
     color:#ffffff96;
 };
 
-.inputBox{
-    color:#ffffff96;
+input[name="submit"]{
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    cursor: pointer;
 };
-
-
