--- a/Backend/static/css/style.css
+++ b/Backend/static/css/style.css
@@ -27,14 +27,15 @@ header {
     background-color: rgba(59, 62, 79, 0.7); 
     padding: 10px 0;
     backdrop-filter: blur(2px); 
+    align-items: center; 
 }
+
 #title {
     font-weight: 900;
     font-size: 2em;
-    margin-left: 2em;
+    margin-left: 1em;
     color: white;
 }
-
 
 nav {
     display: flex;
