--- a/Backend/templates/contact.html
+++ b/Backend/templates/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
+    <link rel="icon" href="static/images/eztravels.png" type="image/png">
     <link rel="stylesheet" href="static/css/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/c19c712794.js" crossorigin="anonymous"></script>
@@ -14,7 +15,7 @@
     <header class="header">
 
         <nav>
-            <h1 id = "title">Saitche</h1>
+            <h1 id = "title">easyTravel</h1>
             <ul class="nav">
                 <li><a href="/home">Home</a></li>
                 <li><a href="/about">About</a></li>
