i dovurshvane na tezi titali

--- a/Backend/templates/create_post.html
+++ b/Backend/templates/create_post.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c19c712794.js" crossorigin="anonymous"></script>
-    <title>Saitche</title>
+    <title>easyTravel</title>
+    <link rel="icon" href="static/images/eztravels.png" type="image/png">
+
 </head>
 <body>
     <header class="header">
         <nav>
-            <h1 id="title">Saitche</h1>
+            <h1 id="title">easyTravel</h1>
             <ul class="nav">
                 <li><a href="/home">Home</a></li>
                 <li><a href="/about">About</a></li>
