Za da zapochnme

--- a/Backend/templates/create_post.html
+++ b/Backend/templates/create_post.html
@@ -30,7 +30,7 @@
 
     <div class="container">
         <div class="post-container"></div>
-
+        <form method="POST" url = "/create_post" enctype="multipart/form-data">
         <div class="drop-area" id="drop-area">
             <p>Drag & Drop an image or click to select</p>
             <input type="file" id="file-input" accept="image/*" hidden>
