--- a/Backend/templates/input.html
+++ b/Backend/templates/input.html
@@ -37,7 +37,7 @@
             <div class="mapForm">
                 <form action="{{ url_for('plan_route') }}" method="POST">
                     <div class="inputBox">
-                        <input type="text" id="destination" required>
+                        <input type="text" id="city" name="city" required>
                         <span>Destination</span>
                     </div>
                     <button class = "hero-btn" onclick="updateMap()" >
@@ -57,7 +57,7 @@
                         <span>Start date</span>
                     </div>
                     <div class="inputBox">
-                        <input type="text" id="end-date" name="end_date" required>
+                        <input type="text" id="end_date" name="end_date" required>
                         <span>End date</span>
                     </div>
                     <div class="inputBox">
